--- a/02-nginx.yml
+++ b/02-nginx.yml
@@ -4,6 +4,10 @@
   tasks:
     - name: Install Nginx
       dnf:
-        name: Nginx
+        name: nginx
         state: absent
         autoremove: yes
+    # - name: stop Nginx
+    #   ansible.builtin.service:
+    #     name: nginx
+    #     state: reloaded
