--- a/04-variables.yml
+++ b/04-variables.yml
@@ -2,8 +2,10 @@
   hosts: localhost
   become: yes
 
-  vars:
-    NAME: "Kalyan"
+  # vars:
+  #   NAME: "Kalyan"
+  vars_files:
+    - vars.yml
   tasks:
     - name: Print the msg
       ansible.builtin.debug:
